force-app/main/default/objects/eBike_Private_Connect_Event__e/eBike_Private_Connect_Event__e.object-meta.xml
<CustomObject>
    <label>eBike Private Connect Event</label>
    <pluralLabel>eBike Private Connect Events</pluralLabel>
</CustomObject>