force-app/main/default/objects/eBike_Private_Connect_Event__e/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>