force-app/main/default/objects/eBike_Private_Connect_Event__e/fields/Payload_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Payload_Field_1__c</fullName>
    <label>Payload Field 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>